# Robust-VINS

./: .gitignore  README.md
config/A3_ptgrey/: a3_ptgrey_stereo_imu_config.yaml
config/M300/: 100_3.txt  100_4.txt  realsense_stereo_imu_config.yaml  vins.rviz
config/euroc/: euroc_stereo_config.yaml
config/kitti_odom/: kitti_config00-02.yaml  kitti_config03.yaml  kitti_config04-12.yaml  kitti_config13-21.yaml
config/kitti_raw/: kitti_09_30_config.yaml  kitti_10_03_config.yaml
config/mono_fisheye_hikcamera/: cam_polynomial.yaml  config.yaml  fisheye_rviz.rviz
config/mynteye/: mynteye_mono_imu_config.yaml  mynteye_stereo_imu_config.yaml
config/realsense_d455/: d455_rviz.rviz  left.yaml  realsense_stereo_imu_config.yaml  right.yaml  rs_camera.launch
config/simulation/: simulation_config.yaml
config/vi_car/: vi_car.yaml
global_fusion/: package.xml
global_fusion/src/: globalOptNode.cpp
global_smooth_fusion/: CMakeLists.txt  package.xml
global_smooth_fusion/src/: global_smooth_fusion.cpp
ground_truth_publisher/: CMakeLists.txt  package.xml
ground_truth_publisher/launch/: ground_truth.launch
ground_truth_publisher/src/: ground_truth_publisher.cpp
imu_filter/: CMakeLists.txt  package.xml
imu_filter/src/: imu_filter.cpp
loop_fusion/src/: keyframe.cpp  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: M600.launch  d455.launch  fisheye_mono_hikcamera.launch  vins_rviz.launch
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp
(+2 files in other folders)
